tests/ui/typeck/constants/immutable_at_file_level.sol
// Immutable not allowed at file level
uint immutable x = 7; //~ ERROR: only constant variables are allowed at file level
